--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -608,7 +608,7 @@
                         line-height: 32px;
                         margin: 0;
                     }
-                    .cp-toolbar-notifications {
+                    .cp-notifications-bell {
                         svg {
                             width: @variables_icon_width;
                             height: @variables_icon_height;
