--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -108,8 +108,8 @@
                     }
                 }
                 .cp-avatar-calendar {
-                    width: 2rem;
-                    height: 2rem;
+                    min-width: 2em;
+                    min-height: 2em;
                     margin: 1rem 0 1rem 1rem;
                 }
                 &.cp-app-notification-archived {
