--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -321,6 +321,9 @@
                                 outline: @variables_focus_style;
                                 border-radius: @variables_radius;
                             }
+                            svg {
+                                margin: 0;
+                            }
                         }
                     }
                 }
