Fix pencils sizing

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -159,6 +159,10 @@
         &.cp-toolbar-button-active {
             background-color: transparent;
         }
+        .lucide-pencil {
+            margin: 0;
+            width: 1em;
+        }
     }
 
     #cp-kanban-edit-body {
@@ -241,6 +245,9 @@
         @media(max-width:500px) or (max-height:700px)
         {
             margin-right:0px;
+        }
+        .lucide-pencil {
+            width: 1em;
         }
     }
 
