--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -83,6 +83,11 @@
         width: ~"calc(100% - 5rem)";
         padding-left: 0.5rem;
         vertical-align: middle;
+        .cp-palette-color {
+            svg.lucide {
+                margin: 0;
+            }
+        }
         .is-hidden {
             display: none;
         }
