Add animation to drive search spinner + mfa button

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -216,6 +216,11 @@
                         font-weight: unset;
                         margin-bottom: 5px;
                     }
+                    button {
+                        svg {
+                            margin: 0 0 0 0.2rem;
+                        }
+                    }
                 }
                 .cp-settings-qr-container {
                     display: flex;
