--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -268,6 +268,9 @@
             width: 2rem;
             margin-bottom: 1.5rem;
         }
+        .cp-spinner svg {
+            animation: spin 10s linear infinite;
+        }
     }
     .cp-app-drive-search-noresult {
         font-size: 30px;
