Update teams & admin & differentiate loading page spinner to apps spinner

--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -307,7 +307,7 @@
                         color: @cp_markdown-block-fg;
                     }
                 }
-                .cp-spinner {
+                .cp-spinner-main {
                     border-color: @cryptpad_color_brand;
                     border-top-color: transparent;
                 }
