--- a/www/secureiframe/app-secure.less
+++ b/www/secureiframe/app-secure.less
@@ -46,7 +46,7 @@
 
             .cp-loading-spinner-container {
                 height: 100px;
-                .cp-spinner {
+                .cp-spinner-main {
                     border-color: @cryptpad_color_brand;
                     border-top-color: transparent;
                 }
