--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -21,6 +21,17 @@
     display: flex;
     flex-flow: column;
     font: @colortheme_app-font;
+    .cp-spinner {
+        svg {
+            animation: spin 10s linear infinite;
+        }
+    }
+    .cp-checkmark {
+        height: 1.2rem;
+        svg {
+            margin-left: @variables_icon_margin;
+        }
+    }
 
     input, textarea, .cp-appblock {
         &:focus-visible {
@@ -142,7 +153,7 @@
     }
 
     .cp-admin-support-state {
-        i {
+        svg {
             margin-right: @sidebar_base-margin;
         }
     }
