--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -206,6 +206,14 @@
         .cp-snapshot-spinner {
             min-height: 90px;
             text-align: center;
+            .cp-spinner {
+                svg {
+                    width: 4rem;
+                    height: 4rem;
+                    vertical-align: middle;
+                    animation: spin 10s linear infinite;
+                }
+            }
         }
         .cp-snapshot-element {
             display: flex;
@@ -213,7 +221,7 @@
             padding: 5px 0;
             outline: none;
             border-radius: @variables_radius;
-            & > i {
+            & > svg {
                 margin-left: @snapshot_spacing;
                 text-align: center;
             }
