--- a/www/moderation/app-moderation.less
+++ b/www/moderation/app-moderation.less
@@ -22,6 +22,17 @@
     label{
         margin-top:0.5rem;
     }
+    .cp-spinner, .cp-ok {
+        margin-left: @variables_icon_margin;
+    }
+    .cp-spinner {
+        svg {
+            animation: spin 10s linear infinite;
+        }
+    }
+    .cp-checkmark {
+        height: 1.5rem;
+    }
 
     display: flex;
     flex-flow: column;
