fix hover style on notifications

--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -47,7 +47,7 @@
             }
             .cp-avatar {
                 .avatar_main(30px);
-                padding: 0 5px;
+                padding: 5px;
             }
             .cp-avatar-image {
                 display: inline-flex;
@@ -71,7 +71,6 @@
             }
             .cp-notification-dismiss {
                 color: @cp_dropdown-fg;
-                width: 25px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
