add icons on support/moderation

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -94,6 +94,9 @@
                 }
                 .cp-support-title-buttons {
                     margin-left: 1em;
+                    svg {
+                        margin: 0;
+                    }
                 }
             }
             .cp-support-ticket-tags {
