--- a/www/oldadmin/app-admin.less
+++ b/www/oldadmin/app-admin.less
@@ -127,8 +127,8 @@
             align-items: top;
             .cp-support-title-buttons {
                 flex-shrink: 0;
-                button i {
-                    margin-right: 0px;
+                button svg {
+                    margin-right: 0;
                 }
             }
         }
