--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -1085,6 +1085,11 @@
                 &:hover {
                     background-color: fade(@cryptpad_text_col, 20%);
                 }
+                .cp-toolbar-userlist-button {
+                    svg {
+                        margin: 0;
+                    }
+                }
             }
         }
 
