--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -77,6 +77,8 @@
             height: 1.5rem;
             svg {
                 margin-left: @variables_icon_margin;
+                min-height: @variables_icon_height;
+                min-width: @variables_icon_width;
             }
         }
 
