--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -60,6 +60,10 @@
                     display: flex;
                     max-width: 100%;
                     align-items: center;
+                    svg {
+                        min-width: @variables_icon_width;
+                        min-height: @variables_icon_height;
+                    }
                     span.cp-sidebarlayout-category-name {
                         padding-left: 5px;
                         white-space: nowrap;
