--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -788,6 +788,9 @@
             gap: 1rem;
         }
         .cp-calendar-newevent {
+            svg {
+                margin: 0;
+            }
             span {
                 display: none;
             }
