Improve a bit positioning of spinner access mute list

--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -161,6 +161,14 @@
     .cp-access-margin-right {
         margin-right: 5px !important;
     }
+    .cp-share-columns {
+        .cp-checkmark {
+            svg.lucide {
+                margin-left: 0;
+                margin-right: 0.2rem;
+            }
+        }
+    }
 
     // teams invite modal
     .cp-teams-invite-block {
