fix button style

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -198,7 +198,7 @@
                         display: none;
                     }
                     .cp-support-hide {
-                        display: inline;
+                        display: inline-flex;
                     }
                 }
                 .cp-support-form-container {
