--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -585,7 +585,8 @@
                 margin: 0;
                 padding: 1px 4px;
                 text-align: center;
-                display: inline-block;
+                display: inline-flex;
+                align-items: center;
                 background-color: @board-bg;
                 color: @cp_kanban-fg !important;
                 cursor: pointer;
