--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -219,8 +219,8 @@
                     display: flex;
                     align-items: center;
                     flex-flow: column;
-                    i {
-                        font-size: 40px;
+                    svg {
+                        margin: 0;
                     }
                 }
                 .cp-team-list-open {
