Fix spinners in moderation

--- a/www/moderation/app-moderation.less
+++ b/www/moderation/app-moderation.less
@@ -30,6 +30,11 @@
             animation: spin 10s linear infinite;
         }
     }
+    .cp-spinner, .cp-ok {
+        svg {
+            vertical-align: middle;
+        }
+    }
     .cp-checkmark {
         height: 1.5rem;
     }
