--- a/customize.dist/src/less2/include/help.less
+++ b/customize.dist/src/less2/include/help.less
@@ -31,6 +31,9 @@
                 outline: @variables_focus_style;
                 border-radius: @variables_radius;
             }
+            svg {
+                margin: 0;
+            }
         }
         .cp-help-text {
             color: @cp_help-fg;
