Fix margin share icon

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -201,6 +201,13 @@
                 display: inline-flex;
                 align-items: center;
             }
+            .cp-settings-safe-links {
+                svg {
+                    margin: 0;
+                    vertical-align: middle;
+                    width: 1rem;
+                }
+            }
             .cp-settings-mfa {
                 .cp-password-container {
                     flex-wrap: wrap;
