--- a/customize.dist/src/less2/pages/page-index.less
+++ b/customize.dist/src/less2/pages/page-index.less
@@ -89,6 +89,8 @@
         }
         .cp-instance-location {
             margin-top: 20px;
+            display: inline-flex;
+            align-items: center;
             svg {
                 font-size: 1.2em;
                 margin-right: @variables_icon_margin;
