update icons on admin panel

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -138,10 +138,14 @@
             flex-flow: column;
         }
         .cp-broadcast-lang {
+            h4 {
+                margin-bottom: 0;
+            }
             margin-left: 30px;
             display: flex;
             flex-flow: column;
             align-items: baseline;
+            gap: 1rem;
             &:not(:last-child) {
                 margin-bottom: @sidebar_base-margin;
             }
