fix text color on buttons

--- a/customize.dist/src/less2/pages/page-features.less
+++ b/customize.dist/src/less2/pages/page-features.less
@@ -18,7 +18,7 @@
         text-decoration: none;
         text-align: center;
         background-color: @cp_buttons-primary;
-        color: @cryptpad_text_col;
+        color: @cryptpad_text_col_inv;
         font-size: 20px;
         margin: 10px 0;
         border-radius: @infopages-radius;
@@ -27,7 +27,7 @@
             background-color:  contrast(@cp_buttons-primary-text, darken(@cp_buttons-primary, 10%), lighten(@cp_buttons-primary, 10%));
         }
         &:visited {
-            color: @cryptpad_text_col;
+            color: @cryptpad_text_col_inv;
         }
     }
     .cp-features-web {
