--- a/customize.dist/src/less2/include/badges.less
+++ b/customize.dist/src/less2/include/badges.less
@@ -47,7 +47,7 @@
             margin: 0;
         }
         .lucide-star {
-            fill: currentColor;
+            fill: currentcolor;
         }
     }
 }
