--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -249,6 +249,9 @@
                 button:not(:last-child) {
                     margin-right: 5px;
                 }
+                .btn {
+                    margin-bottom: 5px;
+                }
             }
             .cp-team-roster-member {
                 display: flex;
