--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -298,7 +298,7 @@
                 margin: 10px 0;
             }
             button.btn {
-                margin: 0 @sidebar_base-margin 0 0;
+                //margin: 0 @sidebar_base-margin 0 0;
                 &:last-child {
                     margin-right: 0;
                 }
