--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -225,7 +225,7 @@
                     }
                     button {
                         svg {
-                            margin: 0 0 0 0.2rem;
+                            margin-right: @variables_icon_margin
                         }
                     }
                 }
