--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -66,6 +66,7 @@
 @cryptpad_color_red_fader: fade(@cryptpad_color_red, 15%);
 @cryptpad_color_warn_red: @cryptpad_color_red_fade;
 @cryptpad_color_dark_red: #9e0000;
+@cryptpad_color_darker_red: darken(@cryptpad_color_dark_red, 10%);
 @cryptpad_color_mid_red: #FF8880;
 @cryptpad_color_light_red: #FFD4D4;
 @cryptpad_color_light_red_fade: fade(@cryptpad_color_light_red, 75%);
@@ -118,12 +119,13 @@
 // Loading screen
 @cp_loading-bg: @cryptpad_color_grey_200;
 @cp_loading-fg: @cryptpad_text_col;
+@cp_loading-color: @cryptpad_color_grey_700;
 @cp_loading-msg-bg: @cryptpad_color_white;
 @cp_loading-link: @cryptpad_color_brand;
 @cp_loading-error-bg: @cryptpad_color_warn_red;
 @cp_loading-error-fg: @cryptpad_text_col;
 @cp_loading-progress-bg: @cryptpad_color_white;
-@cp_loading-progress-bar-bg: @cryptpad_color_brand;
+@cp_loading-progress-bar-bg: @cryptpad_color_brand_300;
 @cp_loading-spinner: @cryptpad_color_grey_500;
 
 // Chat
@@ -156,9 +158,9 @@
 @cp_alerts-warning-bg: @cryptpad_color_yellow_fade;
 @cp_alerts-warning-fg: @cryptpad_color_light_yellow;
 @cp_alerts-warning-text: darken(@cp_alerts-warning-fg, 55%);
-@cp_alerts-danger-bg: @cryptpad_color_light_red_fade;
+@cp_alerts-danger-bg: @cryptpad_color_light_red;
 @cp_alerts-danger-fg: @cryptpad_color_light_red;
-@cp_alerts-danger-text: darken(@cp_alerts-danger-fg, 55%);
+@cp_alerts-danger-text: @cryptpad_color_darker_red;
 @cp_alerts-info-bg: fade(@cryptpad_color_brand, 15%);
 @cp_alerts-info-text: @cryptpad_color_brand;
 @cp_alerts-info-fg: @cryptpad_color_brand;
