Handle loading message with spinner

--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -102,6 +102,10 @@
     @media screen and (max-height: 600px) {
         font-size: 16px !important;
     }
+
+    #cp-loading-spinner-message {
+        color: @cp_loading-color;
+    }
     #cp-loading-message {
         background: @cp_loading-msg-bg;
         padding: 1rem;
