fix cursor style

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -586,6 +586,7 @@
                 &:hover {
                     &:not(.-cp-app-drive-element-selected, .cp-app-drive-element-selected-tmp) {
                         background-color: @cp_drive-icon-hover;
+                        cursor: pointer;
                     }
                 }
             }
