fix slide controls color

--- a/www/slide/app-slide.less
+++ b/www/slide/app-slide.less
@@ -255,6 +255,9 @@
             opacity: 0.6;
             display: none;
             z-index: 9001;
+            svg {
+                color: @cryptpad_text_col;
+            }
         }
         .cp-app-slide-modal-button:hover {
             opacity: 1;
