Adjust loading screen colors

--- a/customize.dist/src/less2/include/colortheme-dark.less
+++ b/customize.dist/src/less2/include/colortheme-dark.less
@@ -54,6 +54,8 @@
 @cryptpad_color_grey_950: #121212;
 @cryptpad_color_black: #000;
 
+@cryptpad_logo_grey: #939393;
+
 @cryptpad_text_col: @cryptpad_color_grey_200;
 @cryptpad_text_col_inv: @cryptpad_color_grey_900;
 
@@ -126,8 +128,8 @@
 @cp_loading-error-bg: @cryptpad_color_warn_red;
 @cp_loading-error-fg: @cryptpad_text_col;
 @cp_loading-progress-bg: @cryptpad_color_grey_800;
-@cp_loading-progress-bar-bg: @cryptpad_color_brand_300;
-@cp_loading-spinner: @cryptpad_color_grey_600;
+@cp_loading-progress-bar-bg: @cryptpad_color_brand;
+@cp_loading-logo: @cryptpad_logo_grey;
 
 // Chat
 @cp_messenger-bg: @cryptpad_color_grey_900;
