--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -54,6 +54,8 @@
 @cryptpad_color_grey_950: #121212;
 @cryptpad_color_black: #000;
 
+@cryptpad_logo_grey: #939393;
+
 @cryptpad_text_col:@cryptpad_color_grey_800;
 @cryptpad_text_col_inv: @cryptpad_color_grey_50;
 
@@ -117,16 +119,16 @@
 @scrollbar_color: @cp_scrollbar-fg transparent;
 
 // Loading screen
-@cp_loading-bg: @cryptpad_color_grey_200;
+@cp_loading-bg: @cryptpad_color_white;
 @cp_loading-fg: @cryptpad_text_col;
 @cp_loading-color: @cryptpad_color_grey_700;
-@cp_loading-msg-bg: @cryptpad_color_white;
+@cp_loading-msg-bg: @cryptpad_color_grey_200;
 @cp_loading-link: @cryptpad_color_brand;
 @cp_loading-error-bg: @cryptpad_color_warn_red;
 @cp_loading-error-fg: @cryptpad_text_col;
-@cp_loading-progress-bg: @cryptpad_color_white;
-@cp_loading-progress-bar-bg: @cryptpad_color_brand_300;
-@cp_loading-spinner: @cryptpad_color_grey_500;
+@cp_loading-progress-bg: @cryptpad_color_grey_200;
+@cp_loading-progress-bar-bg: @cryptpad_color_brand;
+@cp_loading-logo: @cryptpad_logo_grey;
 
 // Chat
 @cp_messenger-bg: @cryptpad_color_grey_200;
