--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -54,7 +54,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-        color: @cp_loading-spinner;
+        color: @cp_loading-logo;
 
         img {
             margin: 0;
