--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -144,7 +144,8 @@
         color: @cp_loading-color;
         align-items: center;
         font-family: "IBM Plex Mono";
-        padding-top: 0.5rem;
+        font-size: 0.75em;
+        margin-top: 2rem;
         gap: 0.5rem;
         svg {
             margin: 0;
