--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -32,6 +32,9 @@
         height: @variables_icon_height;
         margin-right: @variables_icon_margin;
     }
+    .cp-icon-hidden {
+        display: none;
+    }
     .cp-icon-hidden > svg {
         visibility: hidden;
         position: absolute;
@@ -364,7 +367,6 @@
                     align-items: center;
                     cursor: pointer;
                     margin: 0 0 2px -5px;
-                    padding-left: 5px;
                     .cp-app-drive-element {
                         flex: 1;
                         min-width: 0;
@@ -411,9 +413,23 @@
             margin-top: 5px;
         }
         .cp-app-drive-icon-expcol {
+            font-size: 14px;
+            position: absolute;
+            left: -17px;
+            top: 10px;
+            overflow: hidden;
+            width: calc(1em - 2px) !important;
+            height: calc(1em - 2px) !important;
+            background-color: @cp_sidebar-left-item-bg;
+            padding: 0;
+            margin: 0;
+            z-index: 10;
+            cursor: default;
             display: inline-flex;
-            .lucide {
-                margin: 0;
+            svg {
+                margin: -1px;
+                width: 1em;
+                height: 1em;
             }
             &:focus-visible {
                 outline: none;
@@ -436,6 +452,12 @@
             }
             .cp-app-drive-tree-root > .cp-app-drive-element-row {
                 margin-left: 0px;
+                .cp-icon-hidden ~ svg {
+                    margin-left: -21px;
+                }
+                .cp-app-drive-icon-expcol {
+                    top: -1px;
+                }
                 &.cp-app-drive-element-active {
                     .cp-app-drive-icon-expcol {
                         color: @cp_sidebar-left-active-fg; // +/- expand icon for drive
@@ -448,12 +470,15 @@
                 left: -10px;
                 background-color: transparent;
             }
+            .cp-app-drive-tree-root > .cp-app-drive-element-row > svg {
+                margin-left: -6px;
+            }
             .cp-app-drive-tree-root {
                 &> .cp-app-drive-element-row {
                     padding-left: 15px;
                 }
                 &> ul {
-                    padding-left: 45px;
+                    padding-left: 30px;
                 }
             }
         }
@@ -462,7 +487,7 @@
         .cp-app-drive-tree-docs ul {
             margin: 0px 0px 0px 10px;
             list-style: none;
-            padding-left: 30px;
+            padding-left: 10px;
             li {
                 position: relative;
                 &:before {
@@ -474,7 +499,7 @@
                     border-left: 1px solid @cp_drive-tree-branch;
                     height: ~"calc(1em + 11px)";
                     border-bottom: 1px solid @cp_drive-tree-branch;
-                    width: 5px;
+                    width: 11px;
                 }
                 &:after {
                     position: absolute;
