--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -174,7 +174,7 @@
                         box-sizing: border-box;
                         width: 180px;
                         height: 180px;
-                        border: 11px solid @cp_loading-spinner;
+                        border: 11px solid @cp_loading-logo;
                         border-radius: 50%;
                         border-top-color: transparent;
                         animation: spin infinite 3s; // defined in loading.less
