--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -115,6 +115,9 @@
         p:last-child {
             margin-bottom: 0;
         }
+        svg {
+            margin: 0;
+        }
     }
 
     #cp-loading-password-prompt {
