--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -158,7 +158,7 @@
         white-space: nowrap;
         text-align: center;
         text-transform: uppercase;
-        font-size: 14px;
+        font-size: @variables_button-font-size;
         text-decoration: none;
         cursor: pointer;
         border-radius: @variables_radius;
