--- a/customize.dist/src/less2/include/variables.less
+++ b/customize.dist/src/less2/include/variables.less
@@ -12,6 +12,7 @@
 // Elements size
 @variables_bar-height: 32px;
 @variables_input-height: 38px;
+@variables_button-font-size: 14px;
 
 // Used in modal.less and alertify.less
 @variables_padding: 12px;
