--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -31,10 +31,10 @@
             display: flex;
             align-items: center;
             svg {
-                margin: 0;
+                margin: @variables_icon_margin;
             }
             .cp-broadcast {
-                margin: 0.5rem;
+                margin: @variables_icon_margin;
                 width: var(--avatar-width);
                 height: var(--avatar-width);
                 color: @cp_dropdown-fg;
