Fix jitter in form add elements toggle

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -480,6 +480,8 @@
                     margin-bottom: 20px;
                     button {
                         width: 50px;
+                        height: 36px;
+                        margin-right: 0.5rem;
                         svg {
                             margin-right: 0;
                         }
