--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -607,6 +607,7 @@
                 cursor: pointer;
                 float: right;
                 margin-top: 0.5em;
+                margin-right: 0;
             }
         }
         li {
