Fix pad creation screen

--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -262,7 +262,7 @@
 @cp_corner-text: @cryptpad_text_col;
 
 // Pad Creation Screen
-@cp_creation-bg: @cryptpad_color_white;
+@cp_creation-bg: @cryptpad_color_grey_50;
 @cp_creation-fg: @cryptpad_text_col;
 @cp_creation-template: @cryptpad_color_grey_100;
 @cp_creation-button-bg: @cryptpad_color_brand;
