--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -1202,21 +1202,21 @@
                 order: 8;
             }
             .cp-toolbar-file li > a {
-                &.cp-toolbar-icon-newpad        { order: 0; }
-                &.cp-toolbar-icon-snapshots     { order: 5; }
-                &.cp-toolbar-icon-template      { order: 10; }
-                &.cp-toolbar-icon-pad-settings { order: 15; }
-                &.cp-toolbar-icon-history       { order: 20; }
-                &.cp-toolbar-icon-hashtag       { order: 25; }
-                &.cp-toolbar-icon-import-template{ order: 30; }
-                &.cp-toolbar-icon-import        { order: 35; }
-                &.cp-toolbar-icon-copy          { order: 40; }
-                &.cp-toolbar-icon-export        { order: 45; }
-                &.cp-toolbar-icon-print         { order: 50; }
-                &.cp-toolbar-icon-forget        { order: 60; }
+                &.cp-toolbar-icon-newpad .lucide        { order: 0; }
+                &.cp-toolbar-icon-snapshots .lucide    { order: 5; }
+                &.cp-toolbar-icon-template .lucide      { order: 10; }
+                &.cp-toolbar-icon-pad-settings .lucide { order: 15; }
+                &.cp-toolbar-icon-history .lucide       { order: 20; }
+                &.cp-toolbar-icon-hashtag .lucide       { order: 25; }
+                &.cp-toolbar-icon-import-template .lucide { order: 30; }
+                &.cp-toolbar-icon-import .lucide        { order: 35; }
+                &.cp-toolbar-icon-copy .lucide          { order: 40; }
+                &.cp-toolbar-icon-export .lucide        { order: 45; }
+                &.cp-toolbar-icon-print .lucide         { order: 50; }
+                &.cp-toolbar-icon-forget .lucide        { order: 60; }
 
-                &.cp-toolbar-icon-properties    { order: 100; }
-                &.cp-toolbar-icon-help          { order: 150; }
+                &.cp-toolbar-icon-properties .lucide    { order: 100; }
+                &.cp-toolbar-icon-help .lucide          { order: 150; }
 
                 > span { order: 1000; } // text always after icon
             }
