fix buttons layout on forms

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -798,6 +798,8 @@
                             margin-top: 20px;
                             display: flex;
                             justify-content: space-between;
+                            gap: 0.5rem;
+                            flex-wrap: wrap;
                         }
                         .cp-form-copy-button {
                             margin-right: 5px;
