update focus styling

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -992,6 +992,10 @@
                     }
                 }
             }
+            a:focus-visible {
+                outline: @variables_focus_style;
+                border-radius: @variables_radius;
+            }
         }
         div.cp-form-creator-results {
             display: flex;
