--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -310,6 +310,7 @@
                 position: absolute;
                 top: 2px;
                 right: 2px;
+                margin: 0;
             }
         }
         .cp-app-contacts-chat {
